--- a/base/templates/timelinejs.html
+++ b/base/templates/timelinejs.html
@@ -1,14 +1,14 @@
-{% extends "timeline.html" %}
+{% extends "admin/base_site.html" %}
 {% load static  %}
 
 {% block title %}TimelineJS{% endblock %}
 {% block content %}
 <!-- 1 -->
         <link title="timeline-styles" rel="stylesheet"
-              href="/static/css/timeline.css">
+              href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
 
         <!-- 2 -->
-        <script src="/static/js/timeline.js"></script>
+        <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline-min.js"></script>
 
         <div id='timeline-embed' style="width: 100%; height: 600px"></div>
         <script type="text/javascript">
@@ -21,7 +21,7 @@
             }
             async function main(){
                 const json = await getJson();
-                window.timeline = new TL.Timeline('timeline-embed', json);
+                timeline = new TL.Timeline('timeline-embed', json);
             }
 
             main()
