--- a/base/templates/timelinejs.html
+++ b/base/templates/timelinejs.html
@@ -5,10 +5,10 @@
 {% block content %}
 <!-- 1 -->
         <link title="timeline-styles" rel="stylesheet"
-              href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
+              href="/static/css/timeline.css">
 
         <!-- 2 -->
-        <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline-min.js"></script>
+        <script src="/static/js/timeline.js"></script>
 
         <div id='timeline-embed' style="width: 100%; height: 600px"></div>
         <script type="text/javascript">
