--- a/base/templates/import_vc.html
+++ b/base/templates/import_vc.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% load static  %}
 
-{% block title %}Import VC{% endblock %}
+{% block title %}Importação CSV{% endblock %}
 
 {% block content %}
     <form action="" method="post" enctype="multipart/form-data">
