--- a/base/templates/import_vc.html
+++ b/base/templates/import_vc.html
@@ -12,9 +12,7 @@
         {% endfor %}
        <div class="d-flex">
            <button style="padding: 10px 15px" type="submit" class="button">Enviar</button>
-           {% if error %}<a style="margin-left: 10px" href="{{ error }}">Logs de erro</a>{% endif %}
+           {% if error %}<a style="margin-left: 10px" href="{{ error }}">Listagem dos Erros</a>{% endif %}
        </div>
     </form>
-
-
 {% endblock %}
