--- a/base/static/css/timeline.css
+++ b/base/static/css/timeline.css
@@ -261,7 +261,7 @@
   vertical-align: top;
 }
 .tl-timeline {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Poppins", Helvetica, Arial, sans-serif;
   /* VCard
 	================================================== */
 }
