--- a/base/templates/timeline-por-termo.html
+++ b/base/templates/timeline-por-termo.html
@@ -1,13 +1,12 @@
-{% extends 'home.html' %}
+{% extends 'timeline.html' %}
 
 {% block title %}LARHUD ibict - Timeline {{ object|capfirst }}{% endblock %}
 
-{% block content %}
+{% block termo_descricao %}
   <h1>Timeline {{ object|capfirst }}</h1>
   <p>{{ object.texto_explicativo|safe }}</p>
 {% endblock %}
 
 {% block hidden_inputs %}
-  {{ block.super }}
-  <input type="hidden" name="termo" id="id_termo" value="{{ object.termo }}">
+  <input type="hidden" name="termo" id="id_termo" value="{{ object.id }}">
 {% endblock %}
