--- a/base/templates/timeline-por-termo.html
+++ b/base/templates/timeline-por-termo.html
@@ -1,6 +1,6 @@
 {% extends 'timeline.html' %}
 
-{% block title %}LARHUD ibict - Timeline {{ object|capfirst }}{% endblock %}
+{% block title %}LARHUD Ibict - Timeline {{ object|capfirst }}{% endblock %}
 
 {% block termo_descricao %}
   <h1>Timeline {{ object|capfirst }}</h1>
