Adicionada view para envio de contato

--- a/base/templates/inclusao_email.html
+++ b/base/templates/inclusao_email.html
@@ -1,5 +1,5 @@
-<html lang="en">
-<body>
-     <p>{{ termo_solicitado }}</p>
-</body>
-</html>
+<p>Nova mensagem</p>
+<p>Nome: {{ nome }}</p>
+<p>Email: {{ email }}</p>
+<p>Telefone: {{ telefone }}</p>
+<p>{{ mensagem|linebreaksbr }}</p>
