Erro no migrate/Merge feature

--- a/powercms/cms/templates/includes/menu.html
+++ b/powercms/cms/templates/includes/menu.html
@@ -1,7 +1,7 @@
 {% load mptt_tags menu_tags static admin_urls %}
 <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="/"><img class="logo" src="{% static 'site/img/logo.png' %}" alt=""><h1>POWERCMS</h1></a>
+            <a class="navbar-brand" href="/"><img class="logo" src="{% static 'img/logo.png' %}" alt=""><h1>POWERCMS</h1></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
